--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,3 @@
-
 /*Abre ConteinerGrid, decoracion para header */
 .ConteinerGrid{
 	display: grid;
@@ -87,56 +86,64 @@ nav ul li{
                     max-width: 100% ;
                     width: auto;
                     height: auto;
-	             }
+				}
+			}
+/*Abre Animaciones h1*/
+ 
+ :root {
+  --bg-color: hsl(49 100% 100%);
+  --typewriterSpeed: 3s;
+  --typewriterCharacters: 24;
+ }
+	h1 {
+	font-size: clamp(1rem, 3vw + 1rem, 4rem);
+	position: relative;
+	font-family: "Source Code Pro", monospace;
+	position: relative;
+	width: max-content;
+	transform: rotate(5deg);
+	}
 
-h1 {
-  font-size: clamp(1rem, 3vw + 1rem, 4rem);
-  position: relative;
-  font-family: "Source Code Pro", monospace;
-  position: relative;
-  width: max-content;
-}
+	h1:before,
+	h1:after {
+	content: "";
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	}
 
-h1::before,
-h1::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
+	h1:before {
+	background: var(--bg-color);
+	animation: typewriter var(--typewriterSpeed)
+	  steps(var(--typewriterCharacters)) 1s forwards;
+	}
 
-h1::before {
-  background: var(--bg-color);
-  animation: typewriter var(--typewriterSpeed)
-    steps(var(--typewriterCharacters)) 1s forwards;
-}
-
-h1::after {
-  width: 0.125em;
-  background: black;
-  animation: typewriter var(--typewriterSpeed)
-      steps(var(--typewriterCharacters)) 1s forwards,
-    blink 750ms steps(var(--typewriterCharacters)) infinite;
-}
+	h1:after {
+	width: 0.125em;
+	background: black;
+	animation: typewriter var(--typewriterSpeed)
+		steps(var(--typewriterCharacters)) 1s forwards,
+	  blink 750ms steps(var(--typewriterCharacters)) infinite;
+	}
 
 
-@keyframes typewriter {
-  to {
-    left: 100%;
-  }
-}
+	@keyframes typewriter {
+	to {
+	  left: 100%;
+	}
+	}
 
-@keyframes blink {
-  to {
-    background: transparent;
-  }
-}
+	@keyframes blink {
+	to {
+	  background: transparent;
+	}
+	}
 
-@keyframes fadeInUp {
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
+	@keyframes fadeInUp {
+	to {
+	  opacity: 1;
+	  transform: translateY(0);
+	}
+	}
